<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parkingOdabirVozila"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/parkingSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/odabirVozila" />

    <Button
        android:id="@+id/parkingBtnZona1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zona1" />

    <Button
        android:id="@+id/parkingBtnZona2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zona2"/>

    <Button
        android:id="@+id/parkingBtnZona3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zona3" />

    <TextView
        android:id="@+id/parkingZona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/parkingUdaljenost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/parkingPreciznost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</TableLayout>
