<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NotificationActivity" >

    <TextView
        android:id="@+id/notifikacijaVrijemeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifikacijaVrijeme"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/notifikacijaVoziloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifikacijaVozilo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/notifikacijaZonaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/notifikacijaUkloniBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notifikacijaUgasiNotif" />

        <Button
            android:id="@+id/notifikacijaProduziBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notifikacijaProduziParking" />
    </TableRow>

</TableLayout>